fixed image height on mobile product list

--- a/css/product-list-style.css
+++ b/css/product-list-style.css
@@ -38,7 +38,7 @@
 
 .pl-img-box {
     width: 100%;
-    height: 18rem;
+    height: 10rem;
     overflow: hidden;
 }
 
@@ -188,6 +188,12 @@ article>h2 {
     .category-name>img,
     img.cross-close {
         display: none;
+    }
+
+    .pl-img-box {
+        width: 100%;
+        height: 15rem;
+        overflow: hidden;
     }
 
 }
